<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blues Buster</string>
    
    <!-- fragment_welcome -->
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_text_thank_you">Thank you for using Blues Buster!</string>
    <string name="welcome_text_aim_app">The aim of this app is to help people build the skills that researchers find helpful in feeling good.</string>
    <string name="welcome_text_skills_are">These skills are&#8230;</string>
    <string name="welcome_text_personal_scientist">The ability to be your own "personal scientist".</string>
    <string name="welcome_text_know_activities">Know how what you do and what you think relates to how you feel.</string>
    <string name="welcome_text_replace_negative">The ability to challenge negative thoughts</string>
    <string name="welcome_text_know_negatives">Identify irrational negative thoughts and think of more realistic negative thoughts.</string>
    <string name="welcome_text_coping">The ability to cope against negative thoughts that you cannot challenge</string>
    <string name="welcome_text_know_coping">Not all negative thoughts are irrational. Sometimes we just need some coping mechanisms to help us deal with them.</string>
    <string name="welcome_text_build_skills">You will build these skills through a daily diary, daily mood graphs, the "Nab the Negative", the "Destroyer Game", and our built-in coping exercises, as well as the coping exercises you will create.</string>
    <string name="welcome_username_hint">Enter a username.</string>

    <string name="destroyer">write a positive thought to destroy the negative thought</string>
    <string name="destroy">FIRE!</string>
    <string name="destroyer_shooter_cannon_content_description">Cannon</string>
    <string name="lawyer">  If you were trying to act as your own attorney whose job was to defend yourself, and
    whether or not you went to jail depended on the truth of this negative thought, 
    what would you say in your own defense? </string>
    <string name="friend"> If your friend called very upset and said this thought about himself/herself, what
    would you say to him/her?</string>
    <string name="skip"> SKIP IT!</string>
    <string name="help">Help</string>
    <string name="plus">+</string>
    <string name="not">Not at all</string>
    <string name="alot">Completely</string>
    
    <!-- fragment_coping -->
    <string name="breathing_title">Slow Breathing</string>
    <string name="breathing_description">Slow breathing can be helpful. Breathe along with the blowfish in this activity.</string>    
	<string name="rolling_ball_title">Rolling Ball</string>
	<string name="rolling_ball_description">Sometimes it\'s helpful to just take your mind off things.\n\nFocus on capturing the rings with the rolling ball by tilting your phone in this activity.</string>
	<string name="floating_title">Floating Thoughts</string>
	<string name="floating_description">Sometimes it is helpful to try to look at your thoughts without judging them. In this activity, just watch your thoughts float by.</string>
	<string name="floating_unavailable">Whoops! You need some thoughts before you use activity!</string>
	<string name="play">Play</string>
	<string name="learn">Learn More</string>
	
	
	
    <string name="title_help">How would this thought make you feel?</string>  

	<string name="title_believe">How much do you believe this thought </string>
	
	<!-- activity_main -->
	<string name="menu_add_thought">Add Thought</string>
    <string name="menu_mood_graphs">Mood Graphs</string>
    <string name="menu_settings">Settings</string>
	
	<string-array name="main_fragment_titles">
	    <item>Personal Scientist Points</item>
	    <item>Nab the Negative</item>
	    <item>Command the Cannon</item>
	    <item>Coping Exercises</item>
	</string-array>
	
	<!-- activity_add_event -->
	<string name="add_event_create_success">Added a new event</string>
	<string name="add_event_cancel_task">Cancel</string>
	<string name="add_event_next_fragment">&#x21e8;</string>	
	<string name="add_event_user_activity_hint">What are you doing?</string>
	<string name="add_event_user_feeling_hint">How are you feeling?</string>
    <string name="add_event_user_feeling_terrible">Terrible</string>
  	<string name="add_event_user_feeling_great">Great</string>
	<string name="add_event_user_thought_hint">What are you thinking?</string>
	<string name="add_event_user_thought_is_negative">Is this a negative thought?</string>
	<string name="add_event_user_thought_radio_positive">Yes</string>
	<string name="add_event_user_thought_radio_negative">No</string>
	<string name="add_event_user_category_hint">Categorize this thought.</string>
	
	<string-array name="add_event_user_category_titles">
	    <item>Mind reading</item>
	    <item>Fortune-telling</item>
	    <item>Catastrophizing</item>
	    <item>Labeling</item>
	    <item>Discounting positives</item>
	    <item>Dark glasses</item>
	    <item>Black-and-white thinking</item>
	    <item>Over-generalizing</item>
	    <item>Personalizing</item>
	    <item>Shoulds</item>
	    <item>Unfair comparisons</item>
	</string-array>
	
	<string name="add_event_user_category_instruction">See if the negative thought you entered corresponds to any of these common types of negative thinking.</string>

	<string-array name="add_event_user_category_descriptions">
	    <item>You assume what others think about you.</item>
	    <item>You predict the future will be negative.</item>
	    <item>You believe that if something bad happens it will be awful and unbearable.</item>
	    <item>You put negative labels on yourself and others.</item>
	    <item>You only think about the bad side of things.</item>
	    <item>You claim that the positive things you do are not important.</item>
	    <item>You think about things in black-and-white terms; e.g., good or bad, all or none.</item>
	    <item>You make conclusions about how things are based on one event.</item>
	    <item>You blame yourself for negative events.</item>
	    <item>You view things in term of how they "should" be, not how they are.</item>
	    <item>You compare yourself to others doing better than you.</item>
	</string-array>
	
	<string name="use_coping_strategy_dialog_message">Not all negative thoughts can be categorized.\n\nUse a coping strategy instead?</string>
	<string name="use_coping_strategy_dialog_yes">Yes</string>
	<string name="use_coping_strategy_dialog_no">No</string>
	
	<string name="add_thought_coping_strategy_hint">Enter a coping strategy.</string>
	<string name="add_thought_coping_strategy_show_common">Show common coping strategies.</string>
	
	<string-array name="common_coping_strategies">
	    <item>Using Blues Buster\'s coping exercises</item>
	    <item>Listen to music</item>
	    <item>Take a walk</item>
	    <item>Watch TV</item>
	    <item>Call a friend</item>
	    <item>Call family</item>
	    <item>Read a book</item>
	    <item>Knit</item>
	    <item>Squeeze a stressball</item>
	    <item>Exercise</item>
	    <item>Clean</item>
	</string-array>
	
	<!-- fragment_points_summary -->
	<string name="points_summary_badge_description">Add to Diary</string>
	<string name="points_summary_value_prefix">You have earned&#8230;</string>
	<string name="points_summary_value_postfix">personal scientist points.</string>
	<string name="points_summary_view_breakdown">(view detailed points breakdown)</string>
	
	<!-- fragment_capture_summary -->
	<string name="capture_summary_badge_description">Play \'Nab the Negative\'</string>
	<string name="capture_summary_locked_badge_description">\'Nab the Negative\' is locked.</string>
	<string name="capture_summary_locked_notice">To unlock this game, populate your diary with daily thoughts!</string>
	<string name="capture_summary_count_prefix">You have generated&#8230;</string>
	<string name="capture_summary_count_postfix">thoughts to challenge negative thoughts.</string>
	
	<!-- fragment_cannon_summary -->
	<string name="cannon_summary_badge_description">Play \'Command the Cannon\'</string>
	<string name="cannon_summary_locked_badge_description">\'Command the Cannon\' is locked.</string>
	<string name="cannon_summary_locked_notice">To unlock this game, play \'Nab the Negative\' to generate challenging thoughts!</string>
	<string name="cannon_summary_high_score_prefix">Your high score for this game is&#8230;</string>
	<string name="cannon_summary_see_more">(view complete list of high scores)</string>
	
	<!-- fragment_mood_graph -->
	<string name="graph_previous_day">&#x21e6;</string>
	<string name="graph_next_day">&#x21e8;</string>
	
	<string name="thought_detail_activity_label">You were doing&#8230;</string>
    <string name="thought_detail_content_label">You were thinking&#8230;</string>
	
	<string name="block_no_thoughts_text">No thoughts recorded this day.</string>
	
	<!-- activity_capture -->
	<string name="capture_game_begin_label">Nab this negative thought!</string>
	<string name="capture_game_create_thought_hint">Enter a challenging thought!</string>
    <string name="capture_game_create_button_label">Nab!</string>
    
    <!-- activity_capture_select -->
    <string name="capture_select_header_text">Select a category to challenge a negative thought from it.</string>
	
	<!-- fragment_capture_tutorial -->
	<string name="capture_tutorial_sketch_description">Capture Tutorial sketch.</string>	
	
	<string-array name="capture_tutorial_instructions">
	    <item>Not all of the negative thoughts that we have are true.</item>
	    <item>You may think, \'I am stupid\', even though there\'s evidence against it.</item>
	    <item>Like the time you got a good grade on a test.</item>	        
	    <item>Or the time you did well on an interview.</item>
	    <item>But sometimes, coming up with the evidence against those negative thoughts is hard.</item>
	    <item>With this game, you will learn to challenge the truth of your negative thoughts.</item>
	    <item>You will do this by creating "CHALLENGER THOUGHTS".</item>
		<item>Luckily for you, these challenger thoughts are equipped with tractor beams.</item>
	    <item>When you come up with enough challenger thoughts &#8230;</item>
	    <item>&#8230;they will take the negative thought to the \'Destroyer Game\'&#8230;</item>
	    <item>&#8230;where YOU will get rid of it!</item>
	    <item>To start, click on the type of thought you want to challenge.</item>
	</string-array>	
	
	<string name="destroyer_tutorial_sketch_description">Destroyer Tutorial sketch.</string>
	
	<string-array name="destroyer_tutorial_instructions">
	    <item>Here, you can destroy your negative thoughts</item>
	    <item>A list of the all your challenger thoughts will display on the left.</item>
	    <item>Your task is to drag a challenger thought into the cannon and tap the screen where you want the challenger thought to go.</item>
	    <item>If it hits the negative thought, great job! You destroyed it.</item>
	    <item>If it doesn\'t, no worries, try again.</item>
	    <item>The game is over when the screen is filled with challenger thoughts!</item>
	</string-array>

	<string name="menu_capture_tutorial_instructions">Instructions</string>
	
	<!-- fragment_points_breakdown -->
	<string name="points_breakdown_dialog_title">Points Breakdown</string>
	
	<string-array name="point_record_type_labels">
	    <item>Undefined</item>
	    <item>New thought added to diary.</item>
	    <item>Positive feeling for thought bonus!</item>
	</string-array>
	
</resources>
