<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/welcome_text_thank_you"
                android:textStyle="bold"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/welcome_text_aim_app"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/welcome_text_skills_are"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/welcome_text_personal_scientist"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/welcome_text_know_activities"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/welcome_text_replace_negative"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:textStyle="bold" />
 
             <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/welcome_text_know_negatives"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/welcome_text_coping"
                android:textColor="@android:color/holo_purple"
                android:textSize="18sp"
                android:textStyle="bold" />

             <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/welcome_text_know_coping"
                android:textSize="18sp" />
             

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/welcome_text_build_skills"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/setup_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/welcome_username_hint"
        android:inputType="text|textNoSuggestions"
        android:padding="12dp" />

</LinearLayout>