<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/points_summary_badge"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:contentDescription="@string/points_summary_badge_description"
        android:paddingTop="12dp"
        android:src="@drawable/ic_points" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:padding="12dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:paddingBottom="8dp"
                android:text="@string/points_summary_value_prefix" />

            <TextView
                android:id="@+id/points_summary_points_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/holo_green_dark"
                android:textIsSelectable="false"
                android:textSize="64sp"
                android:textStyle="bold" />

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:paddingTop="8dp"
                android:text="@string/points_summary_value_postfix" />
        </LinearLayout>

        <TextView
            android:id="@+id/points_summary_view_breakdown"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/points_summary_view_breakdown" />
    </RelativeLayout>

</LinearLayout>