<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/cannon_summary_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/cannon_summary_badge"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:contentDescription="@string/cannon_summary_badge_description"
            android:paddingTop="12dp"
            android:src="@drawable/ic_cannon" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cannon_summary_locked_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:contentDescription="@string/cannon_summary_locked_badge_description"
            android:paddingTop="12dp"
            android:src="@drawable/ic_locked" />

        <TextView
            android:id="@+id/destroyer_stats_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal|top"
            android:padding="12dp"
            android:text="@string/cannon_summary_locked_notice"
            android:textIsSelectable="false"
            android:textSize="18sp" />
    </LinearLayout>

</FrameLayout>