<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:paddingBottom="8dp"
        android:text="@string/breathing_title"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom_dashed"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/breathing_learn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="8dp"
            android:text="@string/learn"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp" />

        <Button
            android:id="@+id/breathing_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="8dp"
            android:text="@string/play"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:paddingBottom="8dp"
        android:text="@string/rolling_ball_title"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom_dashed"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/rolling_learn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="8dp"
            android:text="@string/learn"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp" />

        <Button
            android:id="@+id/rolling_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="8dp"
            android:text="@string/play"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:paddingBottom="8dp"
        android:text="@string/floating_title"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom_dashed"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/float_learn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="8dp"
            android:text="@string/learn"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp" />

        <Button
            android:id="@+id/float_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="8dp"
            android:text="@string/play"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>