<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/container"
        style="@android:style/Theme.Holo.Light.NoActionBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <com.samportnow.bato.capture.BattleField
            android:id="@+id/battle_field"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light" />

        <LinearLayout
            android:id="@+id/create_thought_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" >

            <AutoCompleteTextView
                android:id="@+id/thoughts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/capture_game_create_thought_hint"
                android:maxLength="140"
                android:padding="15dip" />

            <Button
                android:id="@+id/scale_it"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center"
                android:padding="15dip"
                android:text="@string/capture_game_create_button_label"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/capture_game_begin_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3f000000"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/capture_game_begin_thought_content"
            style="?android:attr/textAppearanceLargeInverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textStyle="italic" />

        <TextView
            style="?android:attr/textAppearanceLargeInverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/capture_game_begin_label"
            android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>